--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     ERROR 9001: SERVER OUTAGE FOR MAINTENANCE.
 
     
-// ...<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
