--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
     RESTRICTED ACCESS DUE TO DEVELOPMENT. PLEASE TRY AGAIN LATER.
 
-    ERROR 9001: SERVER OUTAGE FOR MAINTENANCE.
+    *****ERROR 9001: SERVER OUTAGE FOR MAINTENANCE.*****
 
     
 <!--<!DOCTYPE html>
