--- a/ELP-1739.html
+++ b/ELP-1739.html
@@ -117,7 +117,7 @@
         errorMessage.style.display = 'block';
 
         if (loginAttempts >= maxAttempts) {
-            alert('Maximum login attempts reached. Standby for a directions whilst we are contacting the Internal Security Department & R.A.I.S.A');
+            alert('Maximum login attempts reached. Standby for directions whilst we are contacting the Internal Security Department & R.A.I.S.A');
             window.open(redirectUrl, '_self');
         }
     }
