--- a/support.html
+++ b/support.html
@@ -1,1 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <script src="//code.tidio.co/lezb1xvdsaxahdtmaqrryivfifkbj6q4.js" async></script>
