--- a/support.html
+++ b/support.html
@@ -5,3 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <script src="//code.tidio.co/lezb1xvdsaxahdtmaqrryivfifkbj6q4.js" async></script>
+
+    
+    <footer>
+        <p>&copy; 2024 Abacromby Studios. All rights reserved. Developed, maintained, and operated by Abacromby230 in the United States</p>
+    </footer>
+</body>
+</html>
