--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-    RESTRICTED ACCESS DUE TO DEVELOPMENT. PLEASE TRY AGAIN LATER.
-
-    *****ERROR 9001: SERVER OUTAGE FOR MAINTENANCE.*****
-
-    
-<!--<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
