--- a/ELP-1739.html
+++ b/ELP-1739.html
@@ -71,7 +71,7 @@
 
             // DoRAEC users
             DoRAEC_BoD_Comic: { password: 'Department of Regulation And Ethics Committre Board of Directors Comic', redirect: 'https://sites.google.com/view/site-omegon/DoRAEC_BoD_001' },
-            DoRAEC_JREM_Goof { password: 'Department of Regulation & Ethics Committee Junior Ethics Member Goof', redirect: 'https://sites.google.com/view/site-omegon/' },
+            DoRAEC_JREM_Goof: { password: 'Department of Regulation & Ethics Committee Junior Ethics Member Goof', redirect: 'https://sites.google.com/view/site-omegon/' },
             DoRAECuser3: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
             // ... Add all 50 DoRAEC users here
             DoRAECuser50: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
@@ -88,11 +88,10 @@
             'O5-10': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
             'O5-11': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
             'O5-12': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-13': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-        },
+            'O5-13': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' }
         // ...ISD users
         'ISDLeadSuprvsr_Zuhhttv': { password: 'Internal Security Department Lead Supervisor Zuhhttv', redirect: 'https://sites.google.com/view/site-omegon/ISD-001-002-Dashboard' },
-        'ISDLeadAgent_Silent': { password: 'Internal Security Department Lead Agent Silent', redirect: 'https//sites.google.com/view/site-omegon/ISD-001-002-Dashboard' },
+        'ISDLeadAgent_Silent': { password: 'Internal Security Department Lead Agent Silent', redirect: 'https://sites.google.com/view/site-omegon/ISD-001-002-Dashboard' },
 
         // ... OOTA SECRETARY User(s)
         'TAs_OOTA_Secretary': { password: 'The Administrators Office of The Administrator Secretary', redirect: 'https://sites.google.com/view/site-omegon/AD-OOTA-food35-1739' }; 
