--- a/ELP-1739.html
+++ b/ELP-1739.html
@@ -1,123 +1,148 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation OS Login Page</title>
+    <title>SCP Foundation Secure Login</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            background: #000;
+            font-family: "Courier New", monospace;
+            color: #00ff00;
+            margin: 0;
+            padding: 0;
+            background-image: url('noise.png');
+        }
+
+        .container {
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
         }
-        form {
-            background-color: white;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+
+        .login-box {
+            background: #111;
+            padding: 2em;
+            border: 2px solid #00ff00;
+            box-shadow: 0 0 20px rgba(0, 255, 0, 0.2);
+            max-width: 400px;
+            width: 90%;
         }
-        input {
-            display: block;
-            margin: 10px 0;
-            padding: 5px;
-            width: 200px;
+
+        .logo img {
+            width: 150px;
+            margin-bottom: 1em;
         }
-        button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        #error-message {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            background-color: red;
-            color: white;
-            padding: 10px;
+
+        h1 {
             text-align: center;
-            display: none;
+            font-size: 1.5em;
+            margin-bottom: 1em;
+        }
+
+        .warning {
+            color: #ff0000;
+            text-align: center;
+            margin-bottom: 1em;
+            font-weight: bold;
+        }
+
+        input {
+            width: 100%;
+            padding: 0.5em;
+            margin-bottom: 1em;
+            background: #000;
+            border: 1px solid #00ff00;
+            color: #00ff00;
+            font-family: "Courier New", monospace;
+        }
+
+        button {
+            width: 100%;
+            padding: 0.5em;
+            background: #003300;
+            border: 1px solid #00ff00;
+            color: #00ff00;
+            cursor: pointer;
+            font-family: "Courier New", monospace;
+            font-weight: bold;
+        }
+
+        button:hover {
+            background: #004400;
+        }
+
+        .security-notice {
+            margin-top: 1em;
+            text-align: center;
+            font-size: 0.8em;
+            color: #666;
         }
     </style>
 </head>
 <body>
-    <div id="error-message"></div>
-    <form id="loginForm">
-        <input type="text" id="username" placeholder="Username" required>
-        <input type="password" id="password" placeholder="Password" required>
-        <button type="submit">Login</button>
-    </form>
-
+    <div class="container">
+        <div class="login-box">
+            <div class="logo">
+                <img src="scp-logo.png" alt="SCP Foundation">
+            </div>
+            <h1>SECURE ACCESS TERMINAL</h1>
+            <div class="warning">
+                ⚠ AUTHORIZED PERSONNEL ONLY ⚠
+            </div>
+            <form id="loginForm">
+                <input type="text" id="username" placeholder="Enter Credentials" required>
+                <input type="password" id="password" placeholder="Enter Security Phrase" required>
+                <button type="submit">AUTHENTICATE</button>
+            </form>
+            <div class="security-notice">
+                NOTICE: Unauthorized access will result in immediate termination.
+                <br>
+                Security Level: TOP SECRET
+            </div>
+        </div>
+    </div>
     <script>
         const users = {
-            MTF_A-1_Op_Crab: { password: 'Mobile Task Force Alpha-1 Operative Crab', redirect: 'https://sites.google.com/view/site-omegon/mtf-alpha-1-dashboard' },
-            MTF_E-11_Sr_Op_Ensign: { password: 'Mobile Task Force Epsilion-11 Senior Operative Ensign', redirect: 'https://sites.google.com/view/site-omegon/mtf-epsilon-11-dashboard' },
+            MTF_A1_Op_Crab: { password: 'Mobile Task Force Alpha-1 Operative Crab', redirect: 'https://sites.google.com/view/site-omegon/mtf-alpha-1-dashboard' },
+            MTF_E11_Sr_Op_Ensign: { password: 'Mobile Task Force Epsilion-11 Senior Operative Ensign', redirect: 'https://sites.google.com/view/site-omegon/mtf-epsilon-11-dashboard' },
             MTFuser3: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
             MTFuser125: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-
-            // FSD users
-            FSD_3421_Debris: { password: 'Facility Security Department user 3421 Junior Guard Debris', redirect: 'https://sites.google.com/view/site-omegon/' },
-            FSD_8154_Sure: { password: 'Facility Security Department User 8154 Senior Guard Sure', redirect: 'https://sites.google.com/view/site-omegon/' },
-            FSDuser3: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            // ... Add all 125 FSD users here
-            FSDuser125: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-
-            // DoRAEC users
-            DoRAEC_BoD_Comic: { password: 'Department of Regulation And Ethics Committre Board of Directors Comic', redirect: 'https://sites.google.com/view/site-omegon/DoRAEC_BoD_001' },
-            DoRAEC_JREM_Goof: { password: 'Department of Regulation & Ethics Committee Junior Ethics Member Goof', redirect: 'https://sites.google.com/view/site-omegon/' },
-            DoRAECuser3: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            // ... Add all 50 DoRAEC users here
-            DoRAECuser50: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-
-            // O5 users
-            'O5-2': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-3': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-4': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-5': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-6': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-7': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-8': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-9': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-10': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-11': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-12': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            'O5-13': { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' }
-        // ...ISD users
-        'ISDLeadSuprvsr_Zuhhttv': { password: 'Internal Security Department Lead Supervisor Zuhhttv', redirect: 'https://sites.google.com/view/site-omegon/ISD-001-002-Dashboard' },
-        'ISDLeadAgent_Silent': { password: 'Internal Security Department Lead Agent Silent', redirect: 'https://sites.google.com/view/site-omegon/ISD-001-002-Dashboard' },
-
-        // ... OOTA SECRETARY User(s)
-        'TAs_OOTA_Secretary': { password: 'The Administrators Office of The Administrator Secretary', redirect: 'https://sites.google.com/view/site-omegon/AD-OOTA-food35-1739' }; 
+            FSD_3421_Debris: { password: 'Facility Security Department user 3421 Junior Guard Debris', redirect: 'https://testurl.com' },
+            FSD_8154_Sure: { password: 'Facility Security Department User 8154 Senior Guard Sure', redirect: 'https://testurl.com' },
+            FSDuser3: { password: 'password', redirect: 'https://testurl.com' },
+            FSDuser125: { password: 'password', redirect: 'https://testurl.com' },
+            DoRAEC_BoD_Comic: { password: 'Department of Regulation And Ethics Committre Board of Directors Comic', redirect: 'https://testurl.com' },
+            DoRAEC_JREM_Goof: { password: 'Department of Regulation & Ethics Committee Junior Ethics Member Goof', redirect: 'https://testurl.com' },
+            DoRAECuser3: { password: 'password', redirect: 'https://testurl.com' },
+            DoRAECuser50: { password: 'password', redirect: 'https://testurl.com' },
+            'O5-2': { password: 'password', redirect: 'https://testurl.com' },
+            'O5-3': { password: 'password', redirect: 'https://testurl.com' },
+            'O5-4': { password: 'password', redirect: 'https://testurl.com' },
+            'O5-5': { password: 'password', redirect: 'https://testurl.com' },
+            'O5-6': { password: 'password', redirect: 'https://testurl.com' },
+            'O5-7': { password: 'password', redirect: 'https://testurl.com' },
+            'O5-8': { password: 'password', redirect: 'https://testurl.com' },
+            'O5-9': { password: 'password', redirect: 'https://testurl.com' },
+            'O5-10': { password: 'password', redirect: 'https://testurl.com' },
+            'O5-11': { password: 'password', redirect: 'https://testurl.com' },
+            'O5-12': { password: 'password', redirect: 'https://testurl.com' },
+            'O5-13': { password: 'password', redirect: 'https://testurl.com' },
+            'ISDLeadAgent_Silent': { password: 'Internal Security Department Lead Agent Silent', redirect: 'https://testurl.com' },
+            'TAs_OOTA_Secretary': { password: 'The Administrators Office of The Administrator Secretary', redirect: 'https://testurl.com' }
         };
 
-        let loginAttempts = 0;
-        const maxAttempts = 4;
-        const redirectUrl = 'https://testurl.com/';
-
-  document.getElementById('loginForm').addEventListener('submit', function(e) {
-    e.preventDefault();
-    const username = document.getElementById('username').value;
-    const password = document.getElementById('password').value;
-
-    if (users[username] && users[username].password === password) {
-        alert('Credentials authorized, redirecting to the epo');
-        window.open(users[username].redirect, '_self');
-    } else {
-        loginAttempts++;
-        const errorMessage = document.getElementById('error-message');
-        errorMessage.textContent = `Error code: 401 - Invalid credentials (${maxAttempts - loginAttempts} attempts remaining)`;
-        errorMessage.style.display = 'block';
-
-        if (loginAttempts >= maxAttempts) {
-            alert('Maximum login attempts reached. Standby for directions whilst we are contacting the Internal Security Department & R.A.I.S.A');
-            window.open(redirectUrl, '_self');
-        }
-    }
-});
+        document.getElementById('loginForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+            
+            if (users[username] && users[username].password === password) {
+                window.location.href = users[username].redirect || 'https://testurl.com';
+            } else {
+                alert('ACCESS DENIED: Invalid credentials detected. This incident will be reported.');
+            }
+        });
+    </script>
+</body>
+</html>
