--- a/ELP-1739.html
+++ b/ELP-1739.html
@@ -86,7 +86,7 @@
             <div class="logo">
                 <img src="https://cdn.discordapp.com/attachments/1303447019268079628/1320703350387376228/output-onlinepngtools_upscayl_4x_realesrgan-x4plus-anime.png?ex=676a9058&is=67693ed8&hm=f6e27e934522832d17c7f4ce05742d0affd68585e1639b7745d43dc9206c2fb1&" alt="SCP Foundation">
             </div>
-            <h1>SECURE ACCESS TERMINAL</h1>
+            <h1>L-1+ SECURE ACCESS TERMINAL</h1>
             <div class="warning">
                 ⚠ AUTHORIZED PERSONNEL ONLY ⚠
             </div>
@@ -98,38 +98,18 @@
             <div class="security-notice">
                 NOTICE: Unauthorized access will result in immediate termination.
                 <br>
-                Security Level: TOP SECRET
+                Security Level: Confidential
             </div>
         </div>
     </div>
     <script>
         const users = {
-            MTF_A1_Op_Crab: { password: 'Mobile Task Force Alpha-1 Operative Crab', redirect: 'https://sites.google.com/view/site-omegon/mtf-alpha-1-dashboard' },
-            MTF_E11_Sr_Op_Ensign: { password: 'Mobile Task Force Epsilion-11 Senior Operative Ensign', redirect: 'https://sites.google.com/view/site-omegon/mtf-epsilon-11-dashboard' },
-            MTFuser3: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            MTFuser125: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
+            
             FSD_3421_Debris: { password: 'Facility Security Department user 3421 Junior Guard Debris', redirect: 'https://testurl.com' },
             FSD_8154_Sure: { password: 'Facility Security Department User 8154 Senior Guard Sure', redirect: 'https://testurl.com' },
             FSDuser3: { password: 'password', redirect: 'https://testurl.com' },
             FSDuser125: { password: 'password', redirect: 'https://testurl.com' },
-            DoRAEC_BoD_Comic: { password: 'Department of Regulation And Ethics Committre Board of Directors Comic', redirect: 'https://testurl.com' },
-            DoRAEC_JREM_Goof: { password: 'Department of Regulation & Ethics Committee Junior Ethics Member Goof', redirect: 'https://testurl.com' },
-            DoRAECuser3: { password: 'password', redirect: 'https://testurl.com' },
-            DoRAECuser50: { password: 'password', redirect: 'https://testurl.com' },
-            'O5-2': { password: 'password', redirect: 'https://testurl.com' },
-            'O5-3': { password: 'password', redirect: 'https://testurl.com' },
-            'O5-4': { password: 'password', redirect: 'https://testurl.com' },
-            'O5-5': { password: 'password', redirect: 'https://testurl.com' },
-            'O5-6': { password: 'password', redirect: 'https://testurl.com' },
-            'O5-7': { password: 'password', redirect: 'https://testurl.com' },
-            'O5-8': { password: 'password', redirect: 'https://testurl.com' },
-            'O5-9': { password: 'password', redirect: 'https://testurl.com' },
-            'O5-10': { password: 'password', redirect: 'https://testurl.com' },
-            'O5-11': { password: 'password', redirect: 'https://testurl.com' },
-            'O5-12': { password: 'password', redirect: 'https://testurl.com' },
-            'O5-13': { password: 'password', redirect: 'https://testurl.com' },
-            'ISDLeadAgent_Silent': { password: 'Internal Security Department Lead Agent Silent', redirect: 'https://testurl.com' },
-            'TAs_OOTA_Secretary': { password: 'The Administrators Office of The Administrator Secretary', redirect: 'https://testurl.com' }
+            
         };
 
         document.getElementById('loginForm').addEventListener('submit', function(e) {
