--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
         <section id="contact" class="contact">
             <h2>Contact Us</h2>
             <p>Have questions or suggestions regarding the website? Reach out to us!</p>
-            <a href="scpf.site.omegon.web.dev@tidio.xyz" class="contact-button">Email our Website Developers</a>
+            <a href="Contact" class="contact-button">Email our Website Developers</a>
 
             <p>Have questions or suggestions regarding the Game? Reach out to us!</p>
-            <a href="scpf.site.omegon.game.dev@tidio.xyz" class="contact-button">Email our Game Developers</a>
+            <a href="Contact" class="contact-button">Email our Game Developers</a>
 
             <p>Have legal requests? Reach out to us!</p>
-            <a href="legal.site.omegon@tidio.xyz" class="contact-button">Email our Legal Team</a>
+            <a href="Contact" class="contact-button">Email our Legal Team</a>
         </section>
     </main>
 
