--- a/FSD-Terminal.html
+++ b/FSD-Terminal.html
@@ -86,7 +86,7 @@
 </head>
 <body>
     <div class="logo">
-        <img src="https://cdn.discordapp.com/attachments/1303447019268079628/1320703350387376228/output-onlinepngtools_upscayl_4x_realesrgan-x4plus-anime.png" alt="FSD Logo">
+        <img src="https://cdn.discordapp.com/attachments/1303447019268079628/1320703350387376228/output-onlinepngtools_upscayl_4x_realesrgan-x4plus-anime.png?ex=676a9058&is=67693ed8&hm=f6e27e934522832d17c7f4ce05742d0affd68585e1639b7745d43dc9206c2fb1&" alt="FSD Logo">
     </div>
     <div class="terminal" id="terminal">
     </div>
