--- a/PLP-L-3.html
+++ b/PLP-L-3.html
@@ -105,9 +105,15 @@
     <script>
         const users = {
                     
-           FSD_6513_Captain_Readacted: { password: 'Facility Security Department User 6513 Readacted', redirect: 'https://sites.google.com/view/site-omegon/mtf-epsilon-11-dashboard' },
-            FSDUser3: { password: 'password', redirect: 'https://testurl.com' },
-            FSDuser125: { password: 'password', redirect: 'https://testurl.com' },
+           FSD_6513_Captain_Readacted: { password: 'Facility Security Department User 6513 Readacted', redirect: 'https://abacromby-studios.github.io/Site-Omegon/FSD-Terminal' },
+            FSD_416_Enlist_Nugget: { password: 'Facility Security Department Enlist Nugget', redirect: 'https://abacromby-studios.github.io/Site-Omegon/FSD-Terminal' },
+            FSDFillerUser: { password: 'password', redirect: 'https://testurl.com' },
+            FSDFillerUser: { password: 'password', redirect: 'https://testurl.com' },
+            FSDFillerUser: { password: 'password', redirect: 'https://testurl.com' },
+            FSDFillerUser: { password: 'password', redirect: 'https://testurl.com' },
+            FSDFillerUser: { password: 'password', redirect: 'https://testurl.com' },
+
+
                     
         };
 
