--- a/PLP-L-4.html
+++ b/PLP-L-4.html
@@ -104,11 +104,12 @@
     </div>
     <script>
         const users = {
-            MTF_E11_Sr_Op_Ensign: { password: 'Mobile Task Force Epsilion-11 Senior Operative Ensign', redirect: 'https://sites.google.com/view/site-omegon/mtf-epsilon-11-dashboard' },
-            MTF_E11_Op_Ken: { password: 'Mobile Task Force Epsilon-11 Operative Ken', redirect: 'https://github.com/Abacromby-Studios/Site-Omegon/blob/main/Epsilon-11-NTF-Terminal.html' },
-            MTFuser4: { password: 'password', redirect: 'https://sites.google.com/view/site-omegon/' },
-            DoRAEC_BoD_Comic: { password: 'Department of Regulation And Ethics Committre Board of Directors Comic', redirect: 'https://testurl.com' },
-            DoRAEC_JREM_Goof: { password: 'Department of Regulation & Ethics Committee Junior Ethics Member Goof', redirect: 'https://testurl.com' },
+            MTF_E11_Sr_Op_Ensign: { password: 'Mobile Task Force Epsilion-11 Senior Operative Ensign', redirect: 'https://sites.google.com/view/site-omegon/Epsilon-11-NTF-Terminal.html' },
+            MTF_E11_Op_Ken: { password: 'Mobile Task Force Epsilon-11 Operative Ken', redirect: 'https://github.com/Abacromby-Studios/Site-Omegon/Epsilon-11-NTF-Terminal.html' },
+            MTF_E11_Sr.Op_Razor: { password: 'Mobile Task Force Epsilon-11 Senior Operative Razor', redirect: 'https://github.com/Abacromby-Studios/Site-Omegon/Epsilon-11-NTF-Terminal.html' },
+            DoRAEC_BoD_Comic: { password: 'Department of Regulation And Ethics Committre Board of Directors Comic', redirect: 'https://github.com/Abacromby-Studios/Site-Omegon/Beta-7-MH-Terminal.html' },
+            MTF_B7_Op_Ollie: { password: 'Mobile Task Force Beta-7 Operative Ollie', redirect: 'https://github.com/Abacromby-Studios/Site-Omegon/Beta-7-MH-Terminal.html' },
+            MTF_B7_Op_Kat: { password: 'Mobile Task Force Beta-7 Operative Kat', redirect: 'https://github.com/Abacromby-Studios/Site-Omegon/Beta-7-MH-Terminal.html' },
             DoRAECuser3: { password: 'password', redirect: 'https://testurl.com' },
             DoRAECuser50: { password: 'password', redirect: 'https://testurl.com' },
             
