--- a/L-4-Code-of-Ethics.html
+++ b/L-4-Code-of-Ethics.html
@@ -1,4 +1,73 @@
-.classified {
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>L-5 Code of Ethics</title>
+    <style>
+        :root {
+            --primary-color: #1a1a1a;
+            --secondary-color: #2d2d2d;
+            --accent-color: #b01c1c;
+            --text-color: #ffffff;
+            --border-color: #444444;
+        }
+
+        body {
+            background-color: var(--primary-color);
+            color: var(--text-color);
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        .warning-bar {
+            background-color: var(--accent-color);
+            color: var(--text-color);
+            text-align: center;
+            padding: 10px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+
+        .section {
+            background-color: var(--secondary-color);
+            padding: 20px;
+            margin-bottom: 30px;
+            border: 1px solid var(--border-color);
+            border-radius: 5px;
+        }
+
+        h1, h2, h3 {
+            color: var(--accent-color);
+            border-bottom: 1px solid var(--border-color);
+            padding-bottom: 10px;
+        }
+
+        .data-expunged {
+            background-color: #000;
+            padding: 2px 5px;
+        }
+
+        .classification {
+            margin: 10px 0;
+            padding: 10px;
+            border-left: 4px solid var(--accent-color);
+        }
+
+        .build-up {
+            margin: 20px 0;
+            padding: 15px;
+            background-color: var(--secondary-color);
+        }
+        .classified {
             background-color: #000;
             color: transparent;
             padding: 0 5px;
@@ -8,8 +77,14 @@
             vertical-align: middle;
             border-radius: 2px;
         }
-
-
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="warning-bar">ACCESS TIER: Thaumiel</div>
+        
+        <div class="section">
+            <h1>L-5 CODE OF ETHICS</h1>
 
 
 
