--- a/L-5-Code-of-Ethics.html
+++ b/L-5-Code-of-Ethics.html
@@ -363,7 +363,10 @@
                 </div>
             </div>
 
-            <div class="section">                <h3>COE 7:2 Ethical Promotion</h3>
+            <div class="section">
+                
+                <h3>COE 7:2 Ethical Promotion</h3>
+                
                 <div class="promotion-criteria">
                     <p>Members of the foundation should be promoted if:</p>
                     <ul>
