--- a/L-4-Code-of-Ethics.html
+++ b/L-4-Code-of-Ethics.html
@@ -375,7 +375,7 @@
                 </div>
             </div>
 
-            <div class="section"<   &&&&&&&&
+            <div class="section">
                 <h3>COE 7:2 Ethical Promotion</h3>
                 <div class="promotion-criteria">
                     <p>Members of the foundation should be promoted if:</p>
