--- a/L-4-Code-of-Ethics.html
+++ b/L-4-Code-of-Ethics.html
@@ -111,12 +111,12 @@
                 <h2>«Section 1» COE Position and Hierarchy</h2>
                 
                 <h3>COE 0:0 Code of Ethics Position</h3>
-                <p>The Code of Ethics stands above all O5 and including any and all [Data Expunged] Members exempting The<span class="classified">______________ and if broken there shall be consequences. Note: higher ranking personnel there will be worse consequences due to high levels of expectation</p>
+                <p>The Code of Ethics stands above all O5 and including any and all [Data Expunged] Members exempting The<span class="classified">______________< and if broken there shall be consequences. Note: higher ranking personnel there will be worse consequences due to high levels of expectation</p>
 
                 <h3>COE 0:1 Ranking System</h3>
                 <div class="rank-class">
                     <h4>Class A Personnel»Executives«</h4>
-                    <p>Overseer Council Members, Classified Personnel, Redacted Personnel, and The<span class="classified">______________ and any of his underlings These are the highest ranks of the Foundation. These personnel can leave the site at any time as long as Mobile Task Force Operatives give permission.</p>
+                    <p>Overseer Council Members, Classified Personnel, Redacted Personnel, and The<span class="classified">______________< and any of his underlings These are the highest ranks of the Foundation. These personnel can leave the site at any time as long as Mobile Task Force Operatives give permission.</p>
 
                     <h4>Class B Personnel »Civil«</h4>
                     <p>Administrative Department, Department of External Affairs, Ethics Committee are all considered Civil departments and are deemed very important to the site these personnel can leave the site as long as they have Level Thaumiel Security Clearance and have permission from Mobile Task Force Operatives</p>
