--- a/L-4-Code-of-Ethics.html
+++ b/L-4-Code-of-Ethics.html
@@ -111,12 +111,12 @@
                 <h2>«Section 1» COE Position and Hierarchy</h2>
                 
                 <h3>COE 0:0 Code of Ethics Position</h3>
-                <p>The Code of Ethics stands above all O5 and including any and all [Data Expunged] Members exempting The<span class="classified">______________< and if broken there shall be consequences. Note: higher ranking personnel there will be worse consequences due to high levels of expectation</p>
+                <p>The Code of Ethics stands above all O5 and including any and all [Data Expunged] Members exempting The<span class="classified">______________</span> and if broken there shall be consequences. Note: higher ranking personnel there will be worse consequences due to high levels of expectation</p>
 
                 <h3>COE 0:1 Ranking System</h3>
                 <div class="rank-class">
                     <h4>Class A Personnel»Executives«</h4>
-                    <p>Overseer Council Members, Classified Personnel, Redacted Personnel, and The<span class="classified">______________< and any of his underlings These are the highest ranks of the Foundation. These personnel can leave the site at any time as long as Mobile Task Force Operatives give permission.</p>
+                    <p>Overseer Council Members, Classified Personnel, Redacted Personnel, and The<span class="classified">______________</span> and any of his underlings These are the highest ranks of the Foundation. These personnel can leave the site at any time as long as Mobile Task Force Operatives give permission.</p>
 
                     <h4>Class B Personnel »Civil«</h4>
                     <p>Administrative Department, Department of External Affairs, Ethics Committee are all considered Civil departments and are deemed very important to the site these personnel can leave the site as long as they have Level Thaumiel Security Clearance and have permission from Mobile Task Force Operatives</p>
@@ -185,7 +185,7 @@
                     <p>There is also a viewing area and or catwalk not many are aloud here either:</p>
                     <ul>
                         <li>O5's</li>
-                        <li>The<span class="classified">______________</li>
+                        <li>The<span class="classified">______________</span></li>
                         <li>IA</li>
                         <li>ISD</li>
                         <li>Ethics</li>
@@ -242,7 +242,7 @@
                     <p>No non combative personnel should ever participate in a raid and should report to the Breach Shelter as soon as possible, this includes:</p>
                     <ul>
                         <li>O5's</li>
-                        <li>The<span class="classified">______________</li>
+                        <li>The<span class="classified">______________</span></li>
                         <li>IA</li>
                         <li>ISD (unless given permission)</li>
                         <li>Medical</li>
@@ -272,7 +272,7 @@
                         <li>RRT units are all aloud 245 depending on the rank</li>
                         <li>TAU 5 = 1300 (maximum of 1 TAU 5 unit per site)</li>
                         <li>O5 Council Members = 5400</li>
-                        <li>The<span class="classified">______________ = 6000</li>
+                        <li>The<span class="classified">______________</span> = 6000</li>
                         <li>Chaos Members are aloud 200 to 650 depending on how many active personnel</li>
                         <li>Chaos Leader/The Engineer = 950</li>
                         <li>[Data Expunged] Juggernaut = 1200</li>
@@ -327,10 +327,10 @@
                     </ul>
                 </div>
 
-                <h3>COE 6:1 The<span class="classified">______________ and his underlings authority</h3>
-                <p>The<span class="classified">______________ has Authority over the O5 council but something's they can't prevent</p>
-                <p>If O5 Council members decides that a <span class="classified">______________'s decision is deemed to be unethical, and or just a bad decision in general it may be overturned</p>
-                <p>The<span class="classified">______________ may only gather the Vice<span class="classified">______________ out of, Ethics Committee, O5 Council, Intelligence Agency, and Administrative Department (this is to stop people from getting free ranked to a very high rank and have a understanding of the Administrator and his rank)</p>
+                <h3>COE 6:1 The<span class="classified">______________</span> and his underlings authority</h3>
+                <p>The<span class="classified">______________</span> has Authority over the O5 council but something's they can't prevent</p>
+                <p>If O5 Council members decides that a <span class="classified">______________</span>'s decision is deemed to be unethical, and or just a bad decision in general it may be overturned</p>
+                <p>The<span class="classified">______________</span> may only gather the Vice<span class="classified">______________</span> out of, Ethics Committee, O5 Council, Intelligence Agency, and Administrative Department (this is to stop people from getting free ranked to a very high rank and have a understanding of the<span class="classified">______________</span> and his rank)</p>
 
                 <h3>COE 6:2 Site Command Authority</h3>
                 <p>Site Command or otherwise known as Site Director, Deputy Site Director, and Site Manager etc. each of these have a role not too far off from each other. The Site Director is supposed to direct all divisions and manage everyone's role until there are people in the Administrative Department. Co Site Director does the same job as Site Director. Site Manager assesses people's ranks and promotions and demotions and manages them and keeps track of them. All members of Site Command have a specific authority and if anything happens that is very serious and high class, and the Ethics Committee can't manage to control it, Ethics will come to Site Command.</p>
@@ -405,9 +405,9 @@
                 <h2>«Section 8» RESERVED RIGHTS</h2>
 
                 <h3>COE 8:0 [ÐÅŤÅ―ÊXPÚÑĜĒÐ]'s Rights</h3>
-                <p>These personnel Reserve the Rights to terminate any Overseer Council Members if they provoke the personnel. Sergeant + may Execute Overseer Council Members for whatever reason they deem fit but a report by the personnel must be sent directly to The<span class="classified">__________________________ or The<span class="classified">______________ himself. And has to be supervised by a underling of The<span class="classified">______________ or the Vice<span class="classified">_______________</p>
+                <p>These personnel Reserve the Rights to terminate any Overseer Council Members if they provoke the personnel. Sergeant + may Execute Overseer Council Members for whatever reason they deem fit but a report by the personnel must be sent directly to The<span class="classified">__________________________</span> or The<span class="classified">______________</span> himself. And has to be supervised by a underling of The<span class="classified">______________</span> or the Vice<span class="classified">_______________</span></p>
 
-                <h3>COE 8:1 The<span class="classified">______________'s Rights</h3>
+                <h3>COE 8:1 The<span class="classified">______________</span>'s Rights</h3>
                 <p>The aforementioned person may order a termination of ANY personnel for whatever reason he/she deems fit, this can range from unauthorized knowledge, corruption, or even looking at him/her the wrong way. May dismiss his secretary for any reason or any other underlings but may not do the same to other personnel.</p>
 
                 <h3>COE 8:2 Ethics Committee's Rights</h3>
@@ -430,8 +430,8 @@
                 <h3>COE 10:1 GOI's and COE</h3>
                 <p>GOI Members only have to follow some basic COE, this is due to it being a group of interest and not having any affiliation to the Foundation, Mostly Section 3 Unethical Usage, Also no members of the Foundation may never controls any GOI, this includes:</p>
                 <ul>
-                    <li>The<span class="classified">______________</li>
-                    <li>The Vice<span class="classified">______________</li>
+                    <li>The<span class="classified">______________</span></li>
+                    <li>The Vice<span class="classified">______________</span></li>
                     <li>The O5 Council Members</li>
                     <li>All other foundation members</li>
                 </ul>
