--- a/L-4-Code-of-Ethics.html
+++ b/L-4-Code-of-Ethics.html
@@ -405,7 +405,7 @@
                 <h2>«Section 8» RESERVED RIGHTS</h2>
 
                 <h3>COE 8:0 [ÐÅŤÅ―ÊXPÚÑĜĒÐ]'s Rights</h3>
-                <p>These personnel Reserve the Rights to terminate any Overseer Council Members if they provoke the personnel. Sergeant + may Execute Overseer Council Members for whatever reason they deem fit but a report by the personnel must be sent directly to The<span class="classified">__________________________</span> or The<span class="classified">______________ himself. And has to be supervised by a underling of The<span class="classified">______________ or the Vice<span class="classified">_______________</span></p>
+                <p>These personnel Reserve the Rights to terminate any Overseer Council Members if they provoke the personnel. Sergeant + may Execute Overseer Council Members for whatever reason they deem fit but a report by the personnel must be sent directly to The<span class="classified">__________________________</span> or The<span class="classified">______________</span> himself. And has to be supervised by a underling of The<span class="classified">______________</span> or the Vice<span class="classified">_______________</span></p>
 
                 <h3>COE 8:1 The<span class="classified">______________</span>'s Rights</h3>
                 <p>The aforementioned person may order a termination of ANY personnel for whatever reason he/she deems fit, this can range from unauthorized knowledge, corruption, or even looking at him/her the wrong way. May dismiss his secretary for any reason or any other underlings but may not do the same to other personnel.</p>
