--- a/L-3-Code-of-Ethics.html
+++ b/L-3-Code-of-Ethics.html
@@ -432,7 +432,7 @@
                 <ul>
                     <li>The<span class="classified">______________</span></li>
                     <li>The Vice<span class="classified">______________</span></li>
-                    <li>The Overseer Council Members</li>
+                    <li>The <span class="classified">_______________________</span></li>
                     <li>All other foundation members</li>
                 </ul>
                 <p>GOI's may never be trained for, or by foundation personnel and there is always a special way to enter a GOI on example is for Chaos Insurgency is by defecting from Nu-7, Alpha 1, or Class D from a raid</p>
@@ -442,7 +442,7 @@
 
                 <h3>COE 9:3 Abuse of Commands</h3>
                 <div class="command-abuse">
-                    <p>Anyone with command permissions may not :tp :fly :fullgod :brazil :loopkill or anything of the sort, O5 Council members may :fullgod and :track but no other commands, this is due to them having anomalous capabilities. The<span class="classified">______________</span> may :fly :health :track :to & :bring for the same reason, anomalous capabilities.</p>
+                    <p>Anyone with command permissions may not :tp :fly :fullgod :brazil :loopkill or anything of the sort, <span class="classified">_______________________</span> may :fullgod and :track but no other commands, this is due to them having anomalous capabilities. The<span class="classified">______________</span> may :fly :health :track :to & :bring for the same reason, anomalous capabilities.</p>
                     <ul>
                         <li>1-2 = Classification-Bravo</li>
                         <li>3-5 Classification-Delta</li>
