--- a/L-4-Code-of-Ethics.html
+++ b/L-4-Code-of-Ethics.html
@@ -315,7 +315,7 @@
             </div>
 
             <div class="section">
-                <h2>«Section 7» Overseer Council Members and The Administrator</h2>
+                <h2>«Section 7» Overseer Council Members and The<span class="classified">_____________</span></h2>
 
                 <h3>COE 6:0 Overseer Council Member Authority</h3>
                 <div class="o5-limits">
@@ -411,7 +411,7 @@
                 <p>The aforementioned person may order a termination of ANY personnel for whatever reason he/she deems fit, this can range from unauthorized knowledge, corruption, or even looking at him/her the wrong way. May dismiss his secretary for any reason or any other underlings but may not do the same to other personnel.</p>
 
                 <h3>COE 8:2 Ethics Committee's Rights</h3>
-                <p>The Ethics Committee cannot be demoted unless they abuse their powers, or violate their policies. The Ethics Committee should be feared by the Overseer Council Members, and respected as well by the Overseer Council. Members They may not persecute The Administrator For any reason, they can minorly persecute [ÐĀŤÅ―ÊXPÚÑĜÈÐ] May only be given Classification-Alpha unless the Task Force Overseeing Members act upon it.</p>
+                <p>The Ethics Committee cannot be demoted unless they abuse their powers, or violate their policies. The Ethics Committee should be feared by the Overseer Council Members, and respected as well by the Overseer Council. Members They may not persecute The<span class="classified">______________</span> For any reason, they can minorly persecute [ÐĀŤÅ―ÊXPÚÑĜÈÐ] May only be given Classification-Alpha unless the Task Force Overseeing Members act upon it.</p>
 
                 <h2>Ethics Sub articles</h2>
 
@@ -442,7 +442,7 @@
 
                 <h3>COE 9:3 Abuse of Commands</h3>
                 <div class="command-abuse">
-                    <p>Anyone with command permissions may not :tp :fly :fullgod :brazil :loopkill or anything of the sort, O5 Council members may :fullgod and :track but no other commands, this is due to them having anomalous capabilities. The Administrator may :fly :health :track :to & :bring for the same reason, anomalous capabilities.</p>
+                    <p>Anyone with command permissions may not :tp :fly :fullgod :brazil :loopkill or anything of the sort, Overseer Council members may :fullgod and :track but no other commands, this is due to them having anomalous capabilities. The Administrator may :fly :health :track :to & :bring for the same reason, anomalous capabilities.</p>
                     <ul>
                         <li>1-2 = Classification-Bravo</li>
                         <li>3-5 Classification-Delta</li>
