--- a/L-5-Code-of-Ethics.html
+++ b/L-5-Code-of-Ethics.html
@@ -99,7 +99,7 @@
                 <h2>«Section 1» COE Position and Hierarchy</h2>
                 
                 <h3>COE 0:0 Code of Ethics Position</h3>
-                <p>The Code of Ethics stands above all O5 and including any and all [Data Expunged] Members exempting The Administrator and if broken there shall be consequences. Note: higher ranking personnel there will be worse consequences due to high levels of expectation</p>
+                <p>The Code of Ethics stands above all Overseer Council Members and including any and all [Data Expunged] Members exempting The Administrator and if broken there shall be consequences. Note: higher ranking personnel there will be worse consequences due to high levels of expectation</p>
 
                 <h3>COE 0:1 Ranking System</h3>
                 <div class="rank-class">
@@ -172,7 +172,7 @@
                     </ul>
                     <p>There is also a viewing area and or catwalk not many are aloud here either:</p>
                     <ul>
-                        <li>O5's</li>
+                        <li>Overseer Council Members</li>
                         <li>The Administrator</li>
                         <li>IA</li>
                         <li>ISD</li>
@@ -229,7 +229,7 @@
                 <div class="raid-restrictions">
                     <p>No non combative personnel should ever participate in a raid and should report to the Breach Shelter as soon as possible, this includes:</p>
                     <ul>
-                        <li>O5's</li>
+                        <li>Overseer Council Members's</li>
                         <li>The Administrator</li>
                         <li>IA</li>
                         <li>ISD (unless given permission)</li>
@@ -259,7 +259,7 @@
                         <li>Security Department members are all 100 HP</li>
                         <li>RRT units are all aloud 245 depending on the rank</li>
                         <li>TAU 5 = 1300 (maximum of 1 TAU 5 unit per site)</li>
-                        <li>O5 Council Members = 5400</li>
+                        <li>Overseer Council Members = 5400</li>
                         <li>The Administrator = 6000</li>
                         <li>Chaos Members are aloud 200 to 650 depending on how many active personnel</li>
                         <li>Chaos Leader/The Engineer = 950</li>
@@ -303,11 +303,11 @@
             </div>
 
             <div class="section">
-                <h2>«Section 7» O5 Council Members and The Administrator</h2>
+                <h2>«Section 7» Overseer Council Members and The Administrator</h2>
 
-                <h3>COE 6:0 O5 Authority</h3>
+                <h3>COE 6:0 Overseer Authority</h3>
                 <div class="o5-limits">
-                    <p>O5's have lot of authority although there is many things that they may not do:</p>
+                    <p>Overseer's have lot of authority although there is many things that they may not do:</p>
                     <ul>
                         <li>Free Ranking</li>
                         <li>Abusing commands (flying, tping, etc)</li>
@@ -316,9 +316,9 @@
                 </div>
 
                 <h3>COE 6:1 The Administrator and his underlings authority</h3>
-                <p>The Administrator has Authority over the O5 council but something's they can't prevent</p>
-                <p>If a O5 Council members decides that a Administrator decision is deemed to be unethical, and or just a bad decision in general it may be overturned</p>
-                <p>The Administrator may only gather the Vice Administrator out of, Ethics Committee, O5 Council, Intelligence Agency, and Administrative Department (this is to stop people from getting free ranked to a very high rank and have a understanding of the Administrator and his rank)</p>
+                <p>The Administrator has Authority over the Overseer council but something's they can't prevent</p>
+                <p>If a Overseer Council Members decides that a Administrator decision is deemed to be unethical, and or just a bad decision in general it may be overturned</p>
+                <p>The Administrator may only gather the Vice Administrator out of, Ethics Committee, Overseer Council, Intelligence Agency, and Administrative Department (this is to stop people from getting free ranked to a very high rank and have a understanding of the Administrator and his rank)</p>
 
                 <h3>COE 6:2 Site Command Authority</h3>
                 <p>Site Command or otherwise known as Site Director, Deputy Site Director, and Site Manager etc. each of these have a role not too far off from each other. The Site Director is supposed to direct all divisions and manage everyone's role until there are people in the Administrative Department. Co Site Director does the same job as Site Director. Site Manager assesses people's ranks and promotions and demotions and manages them and keeps track of them. All members of Site Command have a specific authority and if anything happens that is very serious and high class, and the Ethics Committee can't manage to control it, Ethics will come to Site Command.</p>
@@ -421,13 +421,13 @@
                 <ul>
                     <li>The Administrator</li>
                     <li>The Vice Administrator</li>
-                    <li>The O5 Council Members</li>
+                    <li>The Overseer Council Members</li>
                     <li>All other foundation members</li>
                 </ul>
                 <p>GOI's may never be trained for, or by foundation personnel and there is always a special way to enter a GOI on example is for Chaos Insurgency is by defecting from Nu-7, Alpha 1, or Class D from a raid</p>
 
                 <h3>COE 10:2 TAU-5 Orders</h3>
-                <p>Tau-5 may not take orders under any O5 other than O5-3, Tau-5 may break COE if necessary, Tau 5 also may take orders under The Administrator or the Vice Administrator.</p>
+                <p>Tau-5 may not take orders under any Overseer other than O5-3, Tau-5 may break COE if necessary, Tau 5 also may take orders under The Administrator or the Vice Administrator.</p>
 
                 <h3>COE 10:3 Abuse of Commands</h3>
                 <div class="command-abuse">
