--- a/PLP-L-2.html
+++ b/PLP-L-2.html
@@ -86,7 +86,7 @@
             <div class="logo">
                 <img src="https://cdn.discordapp.com/attachments/1303447019268079628/1320703350387376228/output-onlinepngtools_upscayl_4x_realesrgan-x4plus-anime.png?ex=676a9058&is=67693ed8&hm=f6e27e934522832d17c7f4ce05742d0affd68585e1639b7745d43dc9206c2fb1&" alt="SCP Foundation">
             </div>
-            <h1>L-1+ SECURE ACCESS TERMINAL</h1>
+            <h1>L-2+ SECURE ACCESS TERMINAL</h1>
             <div class="warning">
                 ⚠ AUTHORIZED PERSONNEL ONLY ⚠
             </div>
@@ -98,7 +98,7 @@
             <div class="security-notice">
                 NOTICE: Unauthorized access will result in immediate termination.
                 <br>
-                Security Level: Confidential
+                Security Level: Restricted
             </div>
         </div>
     </div>
