--- a/PLP-L-2.html
+++ b/PLP-L-2.html
@@ -105,10 +105,10 @@
     <script>
         const users = {
             
-            FSD_3421_Debris: { password: 'Facility Security Department user 3421 Junior Guard Debris', redirect: 'https://testurl.com' },
-            FSD_8154_Sure: { password: 'Facility Security Department User 8154 Senior Guard Sure', redirect: 'https://testurl.com' },
-            FSDuser3: { password: 'password', redirect: 'https://testurl.com' },
-            FSDuser125: { password: 'password', redirect: 'https://testurl.com' },
+            FSD_3421_Debris: { password: 'Facility Security Department user 3421 Junior Guard Debris', redirect: 'https://abacromby-studios.github.io/Site-Omegon/FSD-Terminal.html' },
+            FSD_8154_Sure: { password: 'Facility Security Department User 8154 Senior Guard Sure', redirect: 'https://abacromby-studios.github.io/Site-Omegon/FSD-Terminal.html' },
+            FSDuser3: { password: 'password', redirect: 'https://abacromby-studios.github.io/Site-Omegon/FSD-Terminal.html' },
+            FSDuser125: { password: 'password', redirect: 'https://abacromby-studios.github.io/Site-Omegon/FSD-Terminal.html' },
             
         };
 
