--- a/DoRAEC_BoD0005.html
+++ b/DoRAEC_BoD0005.html
@@ -121,7 +121,7 @@ PLEASE ENTER PASSWORD.
 
 LOGGING IN…
 
-Welcome Dept Regulations & Ethics Committee, Board of Director, "The Law Bringer"
+Welcome Dept Regulations & Ethics Committee, Board of Director, "The Law Giver"
 
 YOU HAVE NO NEW NOTIFICATION(S)
 
