--- a/DoRAEC_BoD0015.html
+++ b/DoRAEC_BoD0015.html
@@ -105,7 +105,7 @@ Terminal booted
 
  
 
-                                                        > login BoD.DORAC.The_Law_Bringer
+                                                        > login BoD.DORAC.The_Law_Maker
 
 LOGGING IN…
 
@@ -121,7 +121,7 @@ PLEASE ENTER PASSWORD.
 
 LOGGING IN…
 
-Welcome Dept Regulations & Ethics Committee, Board of Director, "The Law Bringer"
+Welcome Dept Regulations & Ethics Committee, Board of Director, "The Law Maker"
 
 YOU HAVE NO NEW NOTIFICATION(S)
 
