--- a/DoRAEC_BoD0007.html
+++ b/DoRAEC_BoD0007.html
@@ -105,7 +105,7 @@ Terminal booted
 
  
 
-                                                        > login BoD.DORAC.The_Law_Bringer
+                                                        > login BoD.DORAC.The_Law_Keeper
 
 LOGGING IN…
 
